...
    <string name="EMPTY_EMAIL">Email address is required.</string>
    <string name="EMPTY_USERNAME">Username is required.</string>
    <string name="EMPTY_PASSWORD">Password is required.</string>
    <string name="NON_ALPHA_NUMERIC_USER_NAME">Non-alphanumeric user name</string>
    <string name="INVALID_EMAIL_ADDRESS">Invalid email address</string>
    <string name="INVALID_PASSWORD">Invalid password</string>
    <string name="EMPTY_STRING">One of the required fields is empty.</string>
    <string name="EmailAddressConflict">Sorry, the email has been registered.</string>
    <string name="UsernameConflict">Sorry, the username has been used.</string>
    <string name="Search">🔍</string>
    <string name="SearchButton">Search</string>
    <string name="ViewProfile">View Profile</string>
    <string name="LOGIN">Log in</string>
    <string name="LOGOUT">Log Out</string>
    <string name="REGISTER">Register</string>
...
